--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Joke</title>
 </head>
 <body>
- <script src="./script.js"></script> 
+  <h1>Chuck Norris Random Joke</h1>
+<script src="./script.js"></script> 
 </body>
 </html>
