--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Chuck Norris Random Joke</h1>
+  <img src="./17794049.png">
 <script src="./script.js"></script> 
 </body>
 </html>
