--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="./style.css">
   <title>Joke</title>
 </head>
-<body>
+<body> 
+<div class="header">
   <h1>Chuck Norris Random Joke</h1>
+</div>
   <img src="./17794049.png">
 <script src="./script.js"></script> 
 </body>
