--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <div class="header">
   <h1>Chuck Norris Random Joke</h1>
 </div>
+<div class="photo">
   <img src="./17794049.png">
+</div>
 <script src="./script.js"></script> 
 </body>
 </html>
