--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="photo">
   <img src="./17794049.png">
 </div>
+<button id="getJoke">Joke</button>
 <script src="./script.js"></script> 
 </body>
 </html>
